--- a/index.html
+++ b/index.html
@@ -149,5 +149,6 @@ if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('/sw.js');
 }
 </script>
+<!-- Alex Komlev -->
 </body>
 </html>
