--- a/index.html
+++ b/index.html
@@ -1,153 +1,70 @@
-<!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>Can Akar, Head of Brand & Campaigns at Uber Eats EMEA, Uber, Amsterdam</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no" />
-<meta name="description" content="Can Akar, high-drive marketeer with passion for telling the story to consumers and wowing them. Specialties & interests are consumer centric innovation, global campaign development (online/offline, ATL, BTL), data driven marketing, strategy, brand experience. Work for The Boston Consulting Group, Philips and Uber.">
-<link rel="shortcut icon" href="favicon.ico"/>
-<link rel="canonical" href="https://canakar.com/" />
-<link rel="manifest" href="/manifest.json">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#53688e">
-<meta name="theme-color" content="#ffffff">
-
-<style>
-@font-face {
-  font-family: 'Playfair Display';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Playfair Display Regular'), local('PlayfairDisplay-Regular'), url(/fonts/PlayfairDisplay-Regular.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-body {
-  margin: 0;
-  overflow-x: hidden;
-  text-align: center;
-  background-color: #fff;
-  font-size: 14px;
-  font-family: 'Playfair Display', serif;
-}
-section {
-  width: 100%;
-  margin: 0;
-  height: 100vh;
-  position: relative;
-  line-height: 95vh;
-  color: #999;
-  font-size: 10vw;
-}
-h1 {
-  display: inline;
-  margin: 0;
-  font-size: inherit;
-  font-weight: inherit;
-  color: #38354E;
-}
-h2 {
-  position: absolute;
-  width: 100%;
-  font-size: 2.3vw;
-  top: 50vh;
-  line-height: 10vh;
-  letter-spacing: 1px;
-  margin: 4.5vw 0 0;
-}
-h3 {
-  position: absolute;
-  width: 100%;
-  font-size: 2.3vw;
-  top: 50vh;
-  line-height: 10vh;
-  letter-spacing: 1px;
-  margin: 6.8vw 0 0;
-}
-a {
-  text-decoration: none;
-  color: inherit;
-}
-a:hover {
-  color: #547EA5;
-}
-
-
-@media only all and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  body {
-    width: 320px;
-    height: 300px;
-  }
-  section {
-    height: 70vh;
-    line-height: 70vh;
-    font-size: 22vw;
-  }
-  h2 {
-    font-size: 6vw;
-    top: 45vh;
-    line-height: 2vh;
-    letter-spacing: -1px;
-    margin: 0;
-  }
-  h3 {
-    font-size: 6vw;
-    top: 45vh;
-    line-height: 2vh;
-    letter-spacing: -1px;
-    margin: 5vh 0 0;
-  }
-}
-@media only all and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-  body {
-    width: 560px;
-    height: 220px;
-  }
-  section {
-    height: 50vh;
-    line-height: 50vh;
-    font-size: 22vw;
-  }
-  h2 {
-    font-size: 5.5vw;
-    top: 45vh;
-    line-height: 2vh;
-    letter-spacing: -1px;
-    margin: 3vh 0 0;
-  }
-  h3 {
-    font-size: 5.5vw;
-    top: 45vh;
-    line-height: 2vh;
-    letter-spacing: -1px;
-    margin: 13vh 0 0;
-  }
-}
-
-@media only all and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  body {
-    width: 380px;
-  }
-}
-@media only all and (min-device-width: 414px) and (max-device-width: 736px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
-  body {
-    width: 420px;
-  }
-}
-</style>
+  <title>Can Akar, Head of Uber EMEA Marketing</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
+  <meta name="description" content="Marketing Executive with track record for building top performing marketing teams, setting the vision and inspiring them to do career defining work that delivers strong business impact.">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="canonical" href="https://canakar.com/">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <meta name="theme-color" content="#000000">
+  <style>
+    @font-face {
+      font-family: 'Roughmarker Upright';
+      src: url('font.woff2') format('woff2');
+      font-weight: normal;
+      font-style: normal;
+      font-display: swap;
+    }
+    :root {
+      font-size: min(max(5vw, 2vh), 5vh);
+    }
+    body {
+      margin: 0;
+      display: flex;
+      overflow-x: hidden;
+      background-color: #000;
+    }
+    h1 {
+      font-family: 'Roughmarker Upright';
+      color: #fffb;
+      position: absolute;
+      font-size: 4rem;
+      font-weight: 100;
+      margin: 0 0 0 0.1em;
+      bottom: -1rem;
+      display: block;
+      text-align: center;
+      white-space: nowrap;
+      width: 100%;
+    }
+    h2 {
+      position: absolute;
+      font-size: 0.7rem;
+      bottom: 0.2rem;
+      margin: 0 auto;
+      color: #fff3;
+      font-family: system-ui;
+      font-weight: 100;
+      text-align: center;
+      width: 100%;
+    }
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+    @media (min-aspect-ratio: 1/1) {
+      img {
+        margin: 0 50%;
+      }
+    }
+  </style>
 </head>
 <body>
-
-<section>
   <h1><a href="https://www.linkedin.com/in/can-akar-122b9ba" rel="noopener">Can Akar</a></h1>
-  <h2>Head of Brand & Campaigns</h2>
-  <h3><a href="https://www.ubereats.com/" target="_blank" rel="noopener">Uber Eats</a>, EMEA. Amsterdam.</h3>
-</section>
-
-<script>
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/sw.js');
-}
-</script>
+  <h2>Head of Uber EMEA Marketing</h2>
+  <img src="canakar.webp" alt="Can Akar, Head of Uber EMEA Marketing" />
 </body>
 </html>
